--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -28,6 +29,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
+    "next-themes": "^0.3.0",
     "nookies": "^2.5.2",
     "react": "^18",
     "react-day-picker": "^8.10.1",
